--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.4",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
+    "puppeteer": "^10.1.0",
     "request": "^2.88.2"
   },
   "devDependencies": {},
