--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "website to epub",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "epub-gen": "^0.1.0",
     "express": "^4.17.1",
+    "html-minifier": "^4.0.0",
     "mongodb": "^3.6.4",
     "os": "^0.1.2",
     "path": "^0.12.7",
