--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "os": "^0.1.2",
     "path": "^0.12.7",
     "puppeteer": "^10.1.0",
+    "puppeteer-extra": "^3.1.18",
+    "puppeteer-extra-plugin-adblocker": "^2.11.11",
     "request": "^2.88.2"
   },
   "devDependencies": {},
